--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 <section id="step2">
   <div>Zehad enters the bunker and sees wounded enemy.</div>
   <div>If you were Zehad, would you investigate the enemy or open fire?</div>
-  <button class="yes">Fire on the enemy?</button>
-  <button class="no">Investigate further?</button>
+  <button class="no">Fire on the enemy?</button>
+  <button class="yes">Investigate further?</button>
 </section>
 <section id="step3">
   <div>Zehad investigates and finds Najah, the wounded soldier to have fatal wounds.</div>
   <div>Without medical help, Najah would die.</div>
-  <div>Upon investigation you find Najah has a live grenade in his hand.</div>
-  <div>You also find he has photos of his family.</div>
+  <div>Upon investigation Zehad finds Najah is holding a live hand grenade.</div>
+  <div>Zehad also finds Najah has photos of his family.</div>
   <div>If you were Zehad, would you stabilize Najah or execute him?</div>
-  <button class="yes">Yes</button>
-  <button class="no">No</button>
+  <button class="yes">Help Zehad using your medical supplies.</button>
+  <button class="no">Execute Najah.</button>
 </section>
 <section id="step4">
+  <div>Zehad 
   <button data-next="step5-yes" class="yes">Yes</button>
   <button data-next="step5-no" class="no">No</button>
 </section>
