--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<section id="step1" >
+<section id="step1" class="focused">
   <!--loop intro-->
   <!--webm of these videos?-->
   <div class="background">
@@ -224,7 +224,7 @@
 </section>
 
 
-<section id="step5-no" class="focused">
+<section id="step5-no">
   <!--<h2>Najah was killed.</h2>-->
     <div class="background">
         <video id="q5-no-video">
